# sequential

./: .gitattributes  README.md  package.yaml  sequential.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Print.hs
src/Lib/: FileReader.hs  Parser.hs  Prelude.hs
test/: Spec.hs
