name:                sequential
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/davidbarsky/sequential#readme
license:             MIT
license-file:        LICENSE
author:              David Barsky
maintainer:          me@davidbarsky.com
copyright:           2017 David Barsky
category:            Distribued Systems
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib, Lib.Parser
  other-modules:       Lib.Prelude
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1.6 && < 0.2
                     , attoparsec >=  0.13.1.0 && < 0.14
                     , prettyprinter >= 1.0 && < 2.0
                     , prettyprinter-ansi-terminal >= 1.0 && < 2.0
                     , time >= 1.6 && < 2.0
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude, DuplicateRecordFields

executable sequential-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sequential
                     , protolude >= 0.1.6 && < 0.2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude, DuplicateRecordFields

test-suite sequential-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sequential
                     , protolude >= 0.1.6 && < 0.2
                     , attoparsec >=  0.13.1.0 && < 0.14
                     , hspec >= 2.4 && < 3.0
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude, DuplicateRecordFields

source-repository head
  type:     git
  location: https://github.com/githubuser/sequential
